[package]
name = "rusttype"
version = "0.7.6"
authors = [
    "Dylan Ede <dylanede@googlemail.com>",
    "Jeremy Soller <jackpot51@gmail.com>",
    "Alex Butler <alexheretic@gmail.com>",
]
edition = "2018"
description = """
A pure Rust alternative to libraries like FreeType.

RustType provides an API for loading, querying and rasterising TrueType fonts.

It also provides an implementation of a dynamic GPU glyph cache for hardware font rendering.
"""
documentation = "https://docs.rs/rusttype"
homepage = "https://gitlab.redox-os.org/redox-os/rusttype"
repository = "https://gitlab.redox-os.org/redox-os/rusttype"
readme = "README.md"
license = "MIT / Apache-2.0"
keywords = ["font", "truetype", "opentype", "ttf", "otf"]
exclude = ["/fonts/**"]

[package.metadata.docs.rs]
features = ["gpu_cache"]

[dependencies]
arrayvec = { version = "0.4", default-features = false }
stb_truetype = "0.2.2"
ordered-float = "1"
approx = { version = "0.3", default-features = false }

linked-hash-map = { version = "0.5", optional = true }
rustc-hash = { version = "1", optional = true }
crossbeam-deque = { version = "0.7", optional = true }
crossbeam-utils = { version = "0.6", optional = true }
num_cpus = { version = "1.0", optional = true }

[dev-dependencies]
glium = "0.25"
image = { version = "0.21", default-features = false, features = ["png_codec"] }
lazy_static = "1"
unicode-normalization = "0.1"
blake2 = "0.8"

[features]
# Compiles benchmark code, to be avoided normally as this currently requires nightly rust
bench = ["gpu_cache"]
gpu_cache = ["linked-hash-map", "rustc-hash", "crossbeam-deque", "crossbeam-utils", "num_cpus"]

[[example]]
name = "gpu_cache"
required-features = ["gpu_cache"]

[[example]]
name = "image"

[[example]]
name = "simple"
