[package]
name = "dev"
version = "0.1.0"
description = "Tests, examples & benchmarks avoiding dependency feature bleed"
edition = "2018"
publish = false

[dev-dependencies]
rusttype = { path = "../", features = ["gpu_cache"] }
glium = "0.27"
image = { version = "0.23", default-features = false, features = ["png"] }
once_cell = "1"
blake2 = "0.8"
criterion = "0.3"

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "draw"
harness = false

[[bench]]
name = "layout"
harness = false
