[package]
name = "dev"
version = "0.1.0"
description = "Tests, examples & benchmarks avoiding dependency feature bleed"
edition = "2018"
publish = false

[dev-dependencies]
rusttype = { path = "../", features = ["gpu_cache"] }
glium = "0.32"
image = { version = "0.24", default-features = false, features = ["png"] }
once_cell = "1"
blake2 = "0.9"
criterion = "0.4"

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "draw"
harness = false

[[bench]]
name = "layout"
harness = false
